# PublicTransportTracking

./: .gitignore  GetStopPoints.py  README.md  environment-dev.yml  environment.yml  fixing_stop_detector.ipynb  ptt.ipynb  pyproject.toml
GPKG/: GTFS-R_stops_iso400m.gpkg  Limerick_Bus_Small_Areas.gpkg  Limerick_Stops_GTFS-R.gpkg  stops_301_to_raheen.gpkg  stops_301_to_westbury.gpkg  stops_302.gpkg  stops_303_to_omalley_park.gpkg  stops_303_to_pineview.gpkg  stops_304A_to_raheen.gpkg  stops_304A_to_ul.gpkg  stops_304_to_raheen.gpkg  stops_305.gpkg  stops_305A.gpkg  stops_306.gpkg  stops_310_to_ntp.gpkg  stops_310_to_sarsfield_st.gpkg
GPX/2019/: 20190217.gpx  20190218.gpx  20190219.gpx  20190220.gpx  304 to Raheen 2019-02-18 1428.gpx  304 to Raheen 2019-02-18 1712.gpx  304 to Raheen 2019-05-17 0923.gpx  304 to UL 2019-02-18 0745.gpx  304 to UL 2019-02-18 1302.gpx  304 to UL 2019-05-17 0701.gpx  304A to Raheen 2019-02-18 0910.gpx  304A_Raheen_Station.gpx  304_1.gpx  Afternoon_Activity.gpx  Lunch_Activity.gpx  Morning_Ride.gpx  Raheen_UL.gpx  Short_hop.gpx  UL_Raheen_304_in_rush_hour.gpx
GPX/2023/: 301_to_Raheen.gpx  301_to_Westbury.gpx  302_1.gpx  302_2023-02-19_1336.gpx  302_2023-02-19_1458.gpx  302_2023-02-24_1549.gpx  302_2023-02-28_1555.gpx  302_2023-02-28_1707.gpx  302_3.gpx  302_5.gpx  304 (1).gpx  304 to Raheen 2023-03-09 2200.gpx  304.gpx  304_6_1_23.gpx  Evening_Activity.gpx  Night_Activity.gpx  UL_Crescent.gpx  UL_Raheen.gpx  Ul_mic.gpx
GPX/Basel/: 14_to_dinner_.gpx  47.gpx  Basel Bus 47 2023-03-07 1657.gpx  Basel Tram 14 2023-03-06 1754.gpx  (+5 more)
PublicTransportTracking/: GetGoogleTraffic  __init__.py  dwell_time_calculator.py  dwelltime2.py  get_gtfs-r.py  rand_points_in_polygon  track.py
(+11 files in other folders)
