[tool.poetry]
name = "publictransporttracking"
version = "0.1.0"
description = "Package for transport geography analysis of public transport routes using timestamped GPS tracks of journeys"
authors = ["bamacgabhann <127785144+breandan.macgabhann@users.noreply.github.com>"]
license = "BSD 3-clause license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
movingpandas = "0.17.1"
hvplot = "0.8.3"
cartopy = "0.22.0"
geoviews = "1.9.6"
param = "1.13.0"
geopandas = "0.14.0"
pandas = "2.1.1"
fiona = "1.9.4"
shapely = "2.0.1"
rtree = "1.0.1"
pyproj = "3.6.1"
matplotlib = "3.8.0"
mapclassify = "2.5.0"
geopy = "2.4.0"
holoviews = "1.17.1"
stonesoup = "1.1"
asttokens = "2.2.1"
bleach = "6.0.0"
contourpy = "1.1.1"
executing = "1.2.0"
geographiclib = "1.52"
numpy = "^1.26.2"
bokeh = "2.4.3"
panel = "0.14.4"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
